# protohackers

./: Cargo.toml  Dockerfile  fly.toml
problem_0/: Cargo.toml  Dockerfile  fly.toml
problem_0/src/: main.rs
problem_1/: Cargo.toml
problem_1/src/: main.rs
problem_2/: Cargo.toml  fly.toml  test.exs
problem_2/src/: main.rs
problem_3/src/: main.rs
problem_4/: Cargo.toml  fly.toml
problem_4/src/: main.rs
problem_5/: Cargo.toml
problem_5/src/: main.rs
src/: main.rs
