[package]
name = "protohackers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.25"
tokio = { version = "1.23.0", features = ["full"] }
tokio-util = {version = "0.7.4" , features = ["full"]}
log = "0.4"
env_logger = "0.10.0"
